flux/clusters/homelab/infrastructure/notifi-mocks/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mocks
  annotations:
    linkerd.io/inject: enabled
  labels:
    name: mocks
    linkerd.io/inject: enabled
